[package]
name = "prometheus-metrics-minimal-reprod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
reqwest ={ version="0.11.14", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
openssl = { version = "0.10.45", features = ["vendored"] }
warp = "0.3.3"
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4"
futures = { version = "0.3", default-features = false }